# chat_bot-

./: .env
chat_components/: pyproject.toml
chat_components/addy_chat/chat/entrypoints/: route_handler.py  routes.py
chatbot_model/: bot.py
webapi/: cli.py  conftest.py  pyproject.toml
webapi/webapi/: __init__.py  bootstrap.py  console.py  main.py  settings.py
webapi/webapi/messagebus/: commands_events_mappings.py  messagebus.py
webapi/webapi/redis_config/: redis_eventconsumer.py  redis_eventpublisher.py
